@@ -80,7 +80,6 @@ SET(APR_INCLUDE_DIRECTORIES
 
 SET(APR_SYSTEM_LIBS
   ws2_32
-  mswsock
   rpcrt4
 )
 
